FlightPath Changelog
====================

2012-04-12
  Laid the groundwork for the History tab.


2012-04-11
  Worked more on Admin, the variable system, and converting the concept of System variables
  over to the variable system, to eliminate the extra "settings" tables which are unneeded.

2012-04-01
  Created permissions page, where users can set which rolls have which permissions.
  

2012-03-31
  Added Rolls management page to admin module.


2012-03-25
  Still workin on admin module.
  Focusing on the Groups section.
  
  Got changing icon working for edit-group page.
  
  Got definitions working on the edit-group page.
  
  Add new group and delete group works.
  
  Fixed bug where groups did not redirect to exactly the correct URL by default.
  
  Process all group definitions now works.
  
  Editing/Adding/Deleting courses now fully works.
  
  Apply draft changes done


2012-03-24
  Still working on admin module.
  
  Can now add new degree plans.
  
  Implemented a new, more robust Form API system similar
  to Drupal.  You can have "required" fields, which
  automatically fail validation if no value is entered.
  
  Automatically looks for a callback_submit() function to submit to; no need
  to register a new menu hook.
  
  Have a new "form_error" function which creates an error
  message for your form. 
  
  Can now "copy" a degree plan.  I believe this basically completes the degrees portion
  of the admin section.
  
  Made some tweaks to the menus, so that in Admin there are tabs now to help the user
  keep track of what screen they are looking at.
  
  Starting on "groups" for Admin.
  
  Created concepts of "popup_description" instead of just "description" in the form_api.
  This causes a [?] link to appear in the label of the element, and, which clicked,
  will popup the text therein.  It makes forms a bit more tidy.
  
  Have basic editing of groups mostly complete.
  

2012-03-23
  Continuing work on admin module.
  