@@ -661,9 +661,9 @@ function admin_apply_draft_changes_form() {
   
   $form["passcode"] = array(
     "type" => "password",
-    "label" => t("For added security, you must enter the transfer passcode:"),
+    "label" => t("For added security, you must enter the Apply Draft Changes password:"),
     "required" => TRUE,
-    "description" => t("This is a passcode set up in FlightPath's settings, to provide an extra layer
+    "description" => t("This is a password set up in FlightPath's settings, to provide an extra layer
                         of security for this powerful action."),
         
   );
@@ -671,7 +671,7 @@ function admin_apply_draft_changes_form() {
   $form["submit"] = array(
     "type" => "submit",
     "value" => t("Submit"),
-    "description" => t("This action may take several minutes to complete!  Click only ONCE!"),
+    "description" => t("This action may take several seconds to complete!  Click only ONCE!"),
     "prefix" => "<hr>",
   );
   
@@ -692,10 +692,10 @@ function admin_apply_draft_changes_form_submit($form, $form_submit) {
   
   // Check to make sure they entered the transfer passcode correctly.
     
-  if ($values["passcode"] != variable_get("admin_transfer_passcode", "changeME")) {
+  if ($values["passcode"] != variable_get("admin_transfer_passcode", "h24897Ewujflnb7 wy2896432hke w490ukj")) {
 
-    form_error("passcode", t("Error!  The passcode you entered is not correct.  Check with the FlightPath administrator
-                              (or check the admin settings pages) to learn the passcode."));
+    form_error("passcode", t("Error!  The password you entered is not correct.  Check with the FlightPath administrator
+                              (or check the admin settings pages) to learn the password."));
     return;
     
   }
